2013-05-21  Holger Seelig  <holger.seelig@yahoo.de>

	* index.wrl: 

2013-05-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* index.wrl: 

2013-05-19  Holger Seelig  <holger.seelig@yahoo.de>

	* TwoSidedMaterial.wrl:
	* example.wrl: 

2013-05-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Rotor.wrl:
	* example.wrl:
	* Torus.wrl:
	* example.wrl:
	* example.wrl:
	* QuadSphere.wrl:
	* example.wrl:
	* TriangleSphere.wrl: 

2013-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Torus.wrl:
	* example.wrl: 

2013-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.wrl: 

2013-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.wrl:
	* FieldTypes.wrl:
	* UserDefinedFields.wrl: 

2013-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2013-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2013-05-16  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* Library.mdproj:
	* test.wrl:
	* Scene.wrl:
	* Browser.wrl:
	* X3DScene.wrl: 

2013-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* example.wrl:
	* IcoSphere.wrl:
	* example.wrl:
	* IcoSphere.wrl: 

2013-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* example.wrl:
	* IcoSphere.wrl: 

2013-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* example.wrl:
	* example.wrl:
	* IcoSphere.wrl: 

2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Delay.wrl: 

2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Delay.wrl:
	* example.wrl:
	* RadioButton.wrl: 

2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* TimeTrigger.wrl:
	* BooleanFilter.wrl:
	* BooleanToggle.wrl:
	* IntegerTrigger.wrl:
	* BooleanTrigger.wrl:
	* IntegerSequencer.wrl: 

2013-05-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.wrl:
	* Comments.wrl:
	* test.wrl:
	* Collision-27fig03.wrl: 

2013-05-06  Holger Seelig  <holger.seelig@yahoo.de>
