@@ -1935,7 +1935,6 @@
     <None Include="Tests\Shaders\Water1.wrl" />
     <None Include="Tests\Shaders\Phong.wrl" />
     <None Include="Tests\Shaders\Lambert.wrl" />
-    <None Include="Prototypes\Geometry2D\RegularPolygon2D\RegularPolygon2D.py" />
     <None Include="Prototypes\Geometry2D\RegularPolygon2D\RegularPolygon2D.wrl" />
     <None Include="Models\People\Beethoven.wrl" />
     <None Include="Models\Household\gift.wrl" />
@@ -2005,6 +2004,49 @@
     <None Include="Prototypes\Geometry3D\Torus\Torus.wrl" />
     <None Include="Prototypes\Engines\Rotor\example.wrl" />
     <None Include="Examples\Moebius\index.wrl" />
+    <None Include="Prototypes\Fields\MFBool\MFBool.wrl" />
+    <None Include="Prototypes\Fields\MFColor\MFColor.wrl" />
+    <None Include="Prototypes\Fields\MFColorRGBA\MFColorRGBA.wrl" />
+    <None Include="Prototypes\Fields\MFDouble\MFDouble.wrl" />
+    <None Include="Prototypes\Fields\MFFloat\MFFloat.wrl" />
+    <None Include="Prototypes\Fields\MFImage\MFImage.wrl" />
+    <None Include="Prototypes\Fields\MFInt32\MFInt32.wrl" />
+    <None Include="Prototypes\Fields\MFMatrix3d\MFMatrix3d.wrl" />
+    <None Include="Prototypes\Fields\MFMatrix4d\MFMatrix4d.wrl" />
+    <None Include="Prototypes\Fields\MFMatrix3f\MFMatrix3f.wrl" />
+    <None Include="Prototypes\Fields\MFMatrix4f\MFMatrix4f.wrl" />
+    <None Include="Prototypes\Fields\MFNode\MFNode.wrl" />
+    <None Include="Prototypes\Fields\MFRotation\MFRotation.wrl" />
+    <None Include="Prototypes\Fields\MFString\MFString.wrl" />
+    <None Include="Prototypes\Fields\MFTime\MFTime.wrl" />
+    <None Include="Prototypes\Fields\MFVec2d\MFVec2d.wrl" />
+    <None Include="Prototypes\Fields\MFVec2f\MFVec2f.wrl" />
+    <None Include="Prototypes\Fields\MFVec3d\MFVec3d.wrl" />
+    <None Include="Prototypes\Fields\MFVec3f\MFVec3f.wrl" />
+    <None Include="Prototypes\Fields\MFVec4d\MFVec4d.wrl" />
+    <None Include="Prototypes\Fields\MFVec4f\MFVec4f.wrl" />
+    <None Include="Prototypes\Fields\SFBool\SFBool.wrl" />
+    <None Include="Prototypes\Fields\SFColor\SFColor.wrl" />
+    <None Include="Prototypes\Fields\SFColorRGBA\SFColorRGBA.wrl" />
+    <None Include="Prototypes\Fields\SFDouble\SFDouble.wrl" />
+    <None Include="Prototypes\Fields\SFFloat\SFFloat.wrl" />
+    <None Include="Prototypes\Fields\SFImage\SFImage.wrl" />
+    <None Include="Prototypes\Fields\SFInt32\SFInt32.wrl" />
+    <None Include="Prototypes\Fields\SFMatrix3d\SFMatrix3d.wrl" />
+    <None Include="Prototypes\Fields\SFMatrix3f\SFMatrix3f.wrl" />
+    <None Include="Prototypes\Fields\SFMatrix4d\SFMatrix4d.wrl" />
+    <None Include="Prototypes\Fields\SFMatrix4f\SFMatrix4f.wrl" />
+    <None Include="Prototypes\Fields\SFNode\SFNode.wrl" />
+    <None Include="Prototypes\Fields\SFRotation\SFRotation.wrl" />
+    <None Include="Prototypes\Fields\SFString\SFString.wrl" />
+    <None Include="Prototypes\Fields\SFTime\SFTime.wrl" />
+    <None Include="Prototypes\Fields\SFVec2d\SFVec2d.wrl" />
+    <None Include="Prototypes\Fields\SFVec2f\SFVec2f.wrl" />
+    <None Include="Prototypes\Fields\SFVec3d\SFVec3d.wrl" />
+    <None Include="Prototypes\Fields\SFVec3f\SFVec3f.wrl" />
+    <None Include="Prototypes\Fields\SFVec4d\SFVec4d.wrl" />
+    <None Include="Prototypes\Fields\SFVec4f\SFVec4f.wrl" />
+    <None Include="Prototypes\Geometry2D\RegularPolygon2D\example.wrl" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tests\Errors\" />
@@ -2068,6 +2110,48 @@
     <Folder Include="Prototypes\Engines\" />
     <Folder Include="Prototypes\Engines\Rotor\" />
     <Folder Include="Examples\Moebius\" />
+    <Folder Include="Prototypes\Fields\MFBool\" />
+    <Folder Include="Prototypes\Fields\MFColor\" />
+    <Folder Include="Prototypes\Fields\MFColorRGBA\" />
+    <Folder Include="Prototypes\Fields\MFDouble\" />
+    <Folder Include="Prototypes\Fields\MFFloat\" />
+    <Folder Include="Prototypes\Fields\MFImage\" />
+    <Folder Include="Prototypes\Fields\MFInt32\" />
+    <Folder Include="Prototypes\Fields\MFMatrix3d\" />
+    <Folder Include="Prototypes\Fields\MFMatrix4d\" />
+    <Folder Include="Prototypes\Fields\MFMatrix3f\" />
+    <Folder Include="Prototypes\Fields\MFMatrix4f\" />
+    <Folder Include="Prototypes\Fields\MFNode\" />
+    <Folder Include="Prototypes\Fields\MFRotation\" />
+    <Folder Include="Prototypes\Fields\MFString\" />
+    <Folder Include="Prototypes\Fields\MFTime\" />
+    <Folder Include="Prototypes\Fields\MFVec2d\" />
+    <Folder Include="Prototypes\Fields\MFVec2f\" />
+    <Folder Include="Prototypes\Fields\MFVec3d\" />
+    <Folder Include="Prototypes\Fields\MFVec3f\" />
+    <Folder Include="Prototypes\Fields\MFVec4d\" />
+    <Folder Include="Prototypes\Fields\MFVec4f\" />
+    <Folder Include="Prototypes\Fields\SFBool\" />
+    <Folder Include="Prototypes\Fields\SFColor\" />
+    <Folder Include="Prototypes\Fields\SFColorRGBA\" />
+    <Folder Include="Prototypes\Fields\SFDouble\" />
+    <Folder Include="Prototypes\Fields\SFFloat\" />
+    <Folder Include="Prototypes\Fields\SFImage\" />
+    <Folder Include="Prototypes\Fields\SFInt32\" />
+    <Folder Include="Prototypes\Fields\SFMatrix3d\" />
+    <Folder Include="Prototypes\Fields\SFMatrix3f\" />
+    <Folder Include="Prototypes\Fields\SFMatrix4d\" />
+    <Folder Include="Prototypes\Fields\SFMatrix4f\" />
+    <Folder Include="Prototypes\Fields\SFNode\" />
+    <Folder Include="Prototypes\Fields\SFRotation\" />
+    <Folder Include="Prototypes\Fields\SFString\" />
+    <Folder Include="Prototypes\Fields\SFTime\" />
+    <Folder Include="Prototypes\Fields\SFVec2d\" />
+    <Folder Include="Prototypes\Fields\SFVec2f\" />
+    <Folder Include="Prototypes\Fields\SFVec3d\" />
+    <Folder Include="Prototypes\Fields\SFVec3f\" />
+    <Folder Include="Prototypes\Fields\SFVec4d\" />
+    <Folder Include="Prototypes\Fields\SFVec4f\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Tests\Navigation\Rotor.wrl" />
