@@ -1,0 +1,20 @@
+#VRML V2.0 utf8 Titania 0.1
+
+META "title" ""
+
+EXTERNPROTO RegularPolygon2D [
+  field SFInt32 vertices
+  field SFVec2f size
+  field SFBool  solid
+  field SFBool  ccw
+]
+"RegularPolygon2D.wrl"
+
+Shape {
+	appearance Appearance {
+		material Material {}
+	}
+	geometry RegularPolygon2D {
+	 vertices 10
+	}
+}
