@@ -62,6 +62,7 @@ function initialize ()
 	geometry .set_spine        = spine;
 }
 "
+    directOutput TRUE
   }
 }
 
